--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=TechZone
 
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/Tech_Zone?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8080
-spring.jpa.open-in-view = false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
+
+server.port=${PORT:8080}
 spring.thymeleaf.check-template-location=false
